Fixed Footer Overlap

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,7 +7,7 @@
   font-family: Georgia, serif;
   box-sizing: border-box;
   color: rgb(34, 34, 34);
-  padding-bottom: 15px;
+  padding-bottom: 45px;
   padding-top: 45px;
   .credits {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
